--- a/lab2/Views/Shared/_Layout.cshtml
+++ b/lab2/Views/Shared/_Layout.cshtml
@@ -69,6 +69,7 @@
                     </li>
                     <li><a href="/Home/Services">Services</a></li>
                     <li><a href="/Home/Contact">Contact</a></li>
+                    <li><a href="/Home/ViewFiles">View Files</a></li>
                 </ul>
                 <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
             </nav>
